# diffbot_pim

./: readme.md
arduino/ros2_esp32/: ros2_esp32.ino
install/: local_setup.sh  setup.sh
install/my_diff_drive_robot/share/ament_index/resource_index/package_run_dependencies/: my_diff_drive_robot
install/my_diff_drive_robot/share/my_diff_drive_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_diff_drive_robot/share/my_diff_drive_robot/cmake/: my_diff_drive_robotConfig.cmake
install/my_diff_drive_robot/share/my_diff_drive_robot/config/: diffdrive.yaml
install/my_diff_drive_robot/share/my_diff_drive_robot/launch/: display.launch copy.py
install/my_diff_drive_robot/share/my_diff_drive_robot/urdf/: lidar.xacro  my_diff_drive.urdf.xacro  my_robot.urdf
log/: latest_build
my_diff_drive_robot/: CMakeLists.txt  package.xml
my_diff_drive_robot/config/: cartographer_2d.lua  diffbot_lds_2d.lua  diffdrive.yaml  nav2_params.yaml  nav2_params_.yaml  slam_toolbox_params.yaml  slam_toolbox_real.yaml
my_diff_drive_robot/launch/: cartographer.launch.py  description.launch.py  diffdrive.launch.py  display.launch.py  full_slam_nav2.launch.py  gazebo.launch.py  gazebo_diff.launch.py  gazebo_world.launch.py  mapping.launch.py  nav2.launch.py  nav2_bringup.launch.py  navigation2.launch.py  occupancy_grid.launch.py  robot_state_publisher.launch.py  slam_mapping.launch.py
my_diff_drive_robot/map/: my_map.pgm  my_map.yaml
my_diff_drive_robot/map/real/: my_map.pgm  my_map.yaml
my_diff_drive_robot/rviz/: urdf.rviz
my_diff_drive_robot/src/: base_link_laser_tf.py  dynamic_base_tf.py  static_base_tf.py
my_diff_drive_robot/urdf/: diffbot.urdf  inertial_macros.xacro  lidar.xacro  my_diff_drive.urdf.xacro  my_diff_drive.urdf_no_mesh.xacro
my_diff_drive_robot/urdf/meshes/: chassis.dae  chassis.stl
my_diff_drive_robot/world/: pim.world
